# firecrawl-app-examples

./: .gitignore  README.md
Claude 3.7 Job Matcher /: app.py
ai-resume-job-matching/: .gitignore  README.md  app.py
blog-thread-converter/: .env.example  README.md  notebook.ipynb  scheduler.py
change-detection-tutorial/: .env.example  firecrawl-docs.md  pyproject.toml  requirements.txt
change-detection-tutorial/.github/workflows/: monthly-scrape.yml  weekly-scrape.yml
change-detection-tutorial/src/: models.py  monthly_scrape.py  weekly_scrape.py
claude-3.7-job-matcher/: .env.example  README.md  app.py  requirements.txt
claude-4-deep-research/: .env.example  06_chatbot_with_multiple_tools.md  ARCHITECTURE.md  README.md  firecrawl-docs.ipynb  pyproject.toml  requirements.txt  run.py  test_setup.py
claude-4-deep-research/src/: app.py  claude_deep_research_app.py  config.py
claude-4-deep-research/src/core/: __init__.py  chat.py  clients.py  research.py
company-data-scraper/: .gitignore  pyproject.toml  requirements.txt
company-data-scraper/data/: companies.txt
company-data-scraper/src/: app.py  models.py  scraper.py
content-optimizer/: README.md  next.config.js  package-lock.json  package.json
crewai_chatgpt_clone/: README.md  crewai-notebook.ipynb  firecrawl-context.ipynb  firecrawl-context.md  pyproject.toml  report.md  requirements.txt
crewai_chatgpt_clone/src/crewai_chatgpt_clone/: app.py  crew.py  main.py  test_tools.py
crewai_chatgpt_clone/src/crewai_chatgpt_clone/config/: agents.yaml  tasks.yaml
crewai_chatgpt_clone/src/crewai_chatgpt_clone/tools/: firecrawl_extract_tool.py  firecrawl_research_tool.py  firecrawl_search_tool.py  openai_image_tool.py
custom-fine-tuning-dataset/: .env.example  .gitignore  requirements.txt
db-pipeline/: hello.py  pyproject.toml
deep-job-researcher/: README.md  middleware.ts  next.config.ts  package-lock.json  package.json  types.d.ts
deep-research-endpoint/: README.md  requirements.txt  run.py
deepseek-fine-tune/: fine-tune-firecrawl-assistant.ipynb  requirements.txt
deepseek-rag/: .env.example  .gitignore  .markdownlint.json  README.md  requirements.txt
deepseek-v3-trend-finder/: .env.example  docker-compose.yml  package-lock.json  package.json
gemini-2-5-agi-newsletter/: README.md
gemini-2-5-pro-trend-finder/: .env.example  Dockerfile  tsconfig.json
gemini-2.5-trend-finder/: README.md  package-lock.json  package.json
gemma-custom-fine-tune/: .gitignore  chunks.json  full_text.md  pyproject.toml  qa_dataset.json  requirements.txt
gemma-custom-fine-tune/src/dataset/: chunk.py  generate_qa_pairs.py  scrape.py  upload_to_hf.py
gemma-custom-fine-tune/src/fine-tune/: gemma_12b_fine_tune.ipynb
google-adk-tutorial/: README.md  pyproject.toml  requirements.txt
google-adk-tutorial/app/: README.md  main.py  requirements.txt
google-adk-tutorial/app/chatgpt_agentic_clone/: agent.py
google-adk-tutorial/app/weather_agent_team/: agent.py
google-adk-tutorial/docs/: agent-team.md  download.py  quickstart-streaming.md  tool-usage-examples.ipynb  tool-usage-examples.md
hero-optimizer/: .gitignore  README.md  next.config.js  package-lock.json  package.json
llama4-fine-tuning/: .env.example  pyproject.toml  requirements.txt
llama4-fine-tuning/data/output/: qa_dataset.json
llama4-fine-tuning/data/processed/: filtered_chunks.json
llama4-fine-tuning/data/raw/: all_chunks.json
llama4-fine-tuning/data/raw/bullet-echo-wiki/: Achievements.md  Agent.md  Alice.md  Ambushers.md  Arcade---Zombie-PVE.md  Arcade.md  Armor-Penetration.md  Bank.md  BasicGearFormat.md  Bastion.md  Bertha.md  Blizzard.md  Blot.md  Body-Armour-Implant.md  Bravery-Level.md  Bullet-Echo-India.md  Casino.md  Celestial.md  Chests.md  Christmas-Rush.md  Classes.md  Combat-Headband.md  Commander's-Beret.md  Common.md  Consumables.md  Contracts.md  Crypto-Chips.md  Cyclops.md  Daily-Bonus.md  Dark-Predator-Set.md  Density.md  Divine.md  Doc.md  Dragoon.md  Drones.md  Easter-Eggs.md  Echo-Path.md  Events.md  Factions-Force-and-Arms.md  Factions-PYRO.md  (+89 more)
llama4-fine-tuning/src/data/: chunk.py  filter.py  generate_qa_pairs.py  scrape.py  upload_to_hf.py
llama4-fine-tuning/src/data/bullet-echo-wiki/: Abilities.md  About-Game.md  Angel.md  Animation.md  Arnie.md  BE-India-Gallery.md  Battle-Royale.md  Bionic-Y-Set.md  Bionic-y.md  Bravery-Road.md  Bullet-Echo-Wiki.md  Character-Page-Guide.md  Characters.md  City.md  Currencies.md  Custom.md  Epic.md  Factions-Skytech-Megacorp.md  Firefly.md  Forgotten-Bazar.md  Freddie.md  Gallery.md  Gear.md  Heavy-Borg-Set.md  Hurricane.md  Immortal.md  Leaderboards.md  Levi.md  Leviathan.md  Map.md  Quarantine-Gears.md  Shenji.md  Smog.md  Soundtrack.md  Special-Forces-Gloves.md  Sprays.md  Stalker.md  Steam.md  Supreme.md  Tactical-Gloves.md  (+10 more)
llama4-fine-tuning/src/tune/: fine-tune.py
logo-tree-builder/: notebook.ipynb  pyproject.toml  streamlit_app.py
logo-tree-builder/src/: main.py
logo-tree-builder/src/models/: company.py
logo-tree-builder/src/scraper/: client_scraper.py  tree_builder.py
logo-tree-builder/src/ui/: app.py
logo-tree-builder/src/visualization/: graph_renderer.py
mcp-document-reader/: document_reader.py  pyproject.toml
mcp-document-reader/src/document_reader/: __init__.py  server.py
mcp-document-reader/src/mcp_document_reader.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
mistral-small-3.1-trend-finder/: .env.example  .gitignore  LICENSE  README.md  package-lock.json  (+1 more)
os-watch/: .env.example  .gitignore  README.md  notebook.ipynb  pyproject.toml  run_app.py
os-watch/src/: __init__.py  app.py  config.py  notifier.py  scheduler.py  scraper.py
startup-validator-langgraph/: .env.example  README.md  main.py  pyproject.toml  requirements.txt
startup-validator-langgraph/src/: __init__.py  app.py  tools.py  validator.py
website-to-agent/: .env.example  README.md  app.py  app_specification.md  notebook.md  pyproject.toml  requirements.txt
website-to-agent/src/: __init__.py  agents.py  config.py  llms_text.py  models.py  ui.py
(+217 files in other folders)
