[project]
name = "db-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aws>=0.2.5",
    "boto3>=1.38.8",
    "firecrawl-py>=2.5.3",
    "pydantic>=2.11.4",
    "python-dotenv>=1.1.0",
]

[dependency-groups]
nb = [
    "ipykernel>=6.29.5",
]
