[tool.poetry]
name = "company-data-scraper"
version = "0.1.0"
description = ""
authors = ["BexTuychiev <bex@ibexprogramming.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.41.1"
pydantic = "^2.10.5"
firecrawl-py = "^1.10.2"
python-dotenv = "^1.0.1"
pandas = "^2.2.3"
anthropic = "^0.45.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
