[tool.poetry]
name = "gemma-custom-fine-tune"
version = "0.1.0"
description = ""
authors = ["BexTuychiev <bex@ibexprogramming.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
firecrawl-py = "^1.15.0"
streamlit = "^1.44.0"
pydantic = "^2.10.6"
asyncio = "^3.4.3"
openai = "^1.68.2"
langchain = {extras = ["all"], version = "^0.3.21"}
langchain-core = "^0.3.48"
langchain-community = "^0.3.20"
langchain-text-splitters = "^0.3.7"
python-dotenv = "^1.1.0"
langchain-experimental = "^0.3.4"
langchain-openai = "^0.3.10"
datasets = "^3.4.1"
huggingface-hub = "^0.29.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
