[tool.poetry]
name = "website-to-agent"
version = "0.1.0"
description = ""
authors = ["BexTuychiev <bex@ibexprogramming.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.43.2"
firecrawl = "^1.14.1"
openai-agents = "^0.0.4"
openai = "^1.66.3"
pydantic = "^2.10.6"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
